option java_package = "com.gp.game.message";

//进入游戏
message OPCandyEnterGame{
	required int32 gameLevel = 1;//房间类型
}

message OPCandyEnterGameRet{
	required int32 currentLayer = 1;//当前层 1=1层 2=2层 3=3层
	required int64 totalMoney = 2;//余额
	required int32 currentPassCount = 3;//当前过关图案的数量
	required int32 totalPassCount = 4;//总过关图案数量
	required int64 grand = 5;//奖池
	required int64 major = 6;//奖池
	required int64 minor = 7;//奖池
	required int64 mini = 8;//奖池
	required int64 stake = 9;//注数
	required int32 line = 10;//单线点数
	required int32 gameLevel = 11;//房间类型
	required int64 winMoney = 12;//输赢的钱
}

//设置注值
message OPCandyStake{
	required int64 money = 1;//金额
}

message OPCandyStakeRet{
	required int64 money = 1;//金额
}

//设置线路值
message OPCandyLine{
	required int32 value = 1;//线路值
}

message OPCandyLineRet{
	required int32 value = 1;//线路值
}

//开始游戏
message OPCandyStartGame{
	required string version = 1;//版本
}

message OPCandyStartGameRet{
	required int32 currentLayer = 1;//当前层 1=1层 2=2层 3=3层
	required int32 currentPassCount = 2;//当前过关图案的数量
	required int32 totalPassCount = 3;//总过关图案数量
	required int32 addPassCount = 4;//本局过关图标数量
	required int64 totalMoney = 5;//余额
	repeated OPCandyEliminateInfo eliminateInfos = 6;//消除谈过个数 集合有几个数就是消除几次
	required OPCandyRewardPoolPush rewardPoolPush = 7;//奖池
	required int64 winMoney = 8;//输赢的钱
	
}
message OPCandyEliminateInfo {
	required int32 eliminateCount = 1;//消除糖果个数
	required int32 candyId = 2;//水果id
	required int64 money = 3;//添加的金额
}

//退出游戏
message OPCandyExitGame{
	required bool isSave = 1;//是否保存记录 true 保存  false 不保存
}

message OPCandyExitGameRet{
	required int32 result = 1;//退出成功
}

//奖池推送
message OPCandyRewardPoolPush{
	required int64 grand = 1;//奖池1
	required int64 major = 2;//奖池2
	required int64 minor = 3;//奖池3
	required int64 mini = 4;//奖池4
}
















